--- a/SMS.Web/Views/Shared/_Layout.cshtml
+++ b/SMS.Web/Views/Shared/_Layout.cshtml
@@ -58,8 +58,8 @@
                         </a>
                         <div id="collapse1" class="collapse" aria-labelledby="headingTwo" data-parent="#collapseDelegate">
                             <div class="bg-sub-menu py-2 collapse-inner rounded">
-                                <a class="collapse-item grey-a-tag" href="#">Cấp quyền</a>
-                                <a class="collapse-item grey-a-tag" href="#">Danh sách người dùng</a>
+                                <a class="collapse-item grey-a-tag" href="/Delegate/Delegate">Cấp quyền</a>
+                                <a class="collapse-item grey-a-tag" href="/Delegate/ListEmployee">Danh sách người dùng</a>
                             </div>
                         </div>
                     </li>
